--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lê Tuấn Thông | Backend Engineer</title>
-    <meta name="description" content="Portfolio của Lê Tuấn Thông - Backend Engineer với hơn 2 năm kinh nghiệm phát triển web với Java, Spring Boot, và các công nghệ hiện đại." />
+    <title>Lê Tuấn Thông | Software Engineer</title>
+    <meta name="description" content="Portfolio của Lê Tuấn Thông - Software Engineer với hơn 2 năm kinh nghiệm phát triển web với Java, Spring Boot, và các công nghệ hiện đại." />
     <meta name="author" content="Lê Tuấn Thông" />
-    <meta name="keywords" content="Backend Engineer, Java Developer, Spring Boot, Web Developer, Portfolio, Resume" />
+    <meta name="keywords" content="Software Engineer, Java Developer, Spring Boot, Web Developer, Portfolio, Resume" />
 
-    <meta property="og:title" content="Lê Tuấn Thông | Backend Engineer" />
-    <meta property="og:description" content="Portfolio của Lê Tuấn Thông - Backend Engineer với hơn 2 năm kinh nghiệm phát triển web." />
+    <meta property="og:title" content="Lê Tuấn Thông | Software Engineer" />
+    <meta property="og:description" content="Portfolio của Lê Tuấn Thông - Software Engineer với hơn 2 năm kinh nghiệm phát triển web." />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
